// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NotificationBadge component testing NotificationBadge dot 1`] = `
<DocumentFragment>
  <div
    class="sc-bdvvtL jQVSpr"
  >
    text
    <span
      class="sc-gsDKAQ hmTpyD"
    />
  </div>
</DocumentFragment>
`;

exports[`NotificationBadge component testing NotificationBadge normal 1`] = `
<DocumentFragment>
  <div
    class="sc-bdvvtL jQVSpr"
  >
    text
    <span
      class="sc-gsDKAQ ScVXF"
    >
      1
    </span>
  </div>
</DocumentFragment>
`;
